--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Equaliteach</title>
 
   <link
     rel="stylesheet"
@@ -25,8 +26,8 @@
   <nav class="navbar" id="navbar">
     <p class="logo">EQUALITEACH</p>
     <div class="navbar-nav">
-      <a href="#/home">Home</a>
-      <a href="#/content">Content</a>
+      <a href="#/home" onClick="scrollToTop()">Home</a>
+      <a href="#/content" onClick="scrollToTop()">Content</a>
       <a href="#/aboutus">About Us</a>
     </div>
     <div class="navbar-extra">
