--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,8 +51,19 @@
   background-color: var(--gray-900);
 }
 
+.navbar.blur,
+main.blur,
+footer.blur {
+  filter: blur(20px);
+}
+
 .wrapper {
-  position: relative;
+  position: fixed;
+  top:0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
   width: 400px;
   height: 440px;
   background: transparent;
@@ -67,10 +78,12 @@
   overflow: hidden;
   transform: scale(0);
   transition: transform .5s ease, height .2s ease;
+  z-index: 98;
 }
 
 .wrapper.active-popup {
   transform: scale(1);
+  top: 50px;
 }
 
 .wrapper.active {
@@ -109,7 +122,7 @@
   right: 0;
   width: 45px;
   height: 45px;
-  background: var(--color-darkseagreen);
+  background:#005a4a;
   color: black;
   display: flex;
   justify-content: center;
@@ -121,7 +134,7 @@
 
 .form-box h2 {
   font-size: 2em;
-  color: var(--color-darkseagreen);
+  color: chocolate;
   text-align: center;
 }
 
@@ -139,7 +152,7 @@
   left: 5px;
   transform: translateY(-50%);
   font-size: 1em;
-  color: var(--color-darkseagreen);
+  color: chocolate;
   font-weight: 500;
   transition: .5s;
 }
@@ -194,7 +207,7 @@
 .btn-login-mail {
   width: 100%;
   height: 45px;
-  background: var(--color-darkseagreen);
+  background: #005a4a;
   border: none;
   outline: none;
   border-radius: 6px;
