--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,19 +51,8 @@
   background-color: var(--gray-900);
 }
 
-.navbar.blur,
-main.blur,
-footer.blur {
-  filter: blur(20px);
-}
-
 .wrapper {
-  position: fixed;
-  top:0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
+  position: relative;
   width: 400px;
   height: 440px;
   background: transparent;
@@ -78,12 +67,10 @@ footer.blur {
   overflow: hidden;
   transform: scale(0);
   transition: transform .5s ease, height .2s ease;
-  z-index: 98;
 }
 
 .wrapper.active-popup {
   transform: scale(1);
-  top: 50px;
 }
 
 .wrapper.active {
@@ -122,7 +109,7 @@ footer.blur {
   right: 0;
   width: 45px;
   height: 45px;
-  background:#005a4a;
+  background: var(--color-darkseagreen);
   color: black;
   display: flex;
   justify-content: center;
@@ -134,7 +121,7 @@ footer.blur {
 
 .form-box h2 {
   font-size: 2em;
-  color: chocolate;
+  color: var(--color-darkseagreen);
   text-align: center;
 }
 
@@ -152,7 +139,7 @@ footer.blur {
   left: 5px;
   transform: translateY(-50%);
   font-size: 1em;
-  color: chocolate;
+  color: var(--color-darkseagreen);
   font-weight: 500;
   transition: .5s;
 }
@@ -207,7 +194,7 @@ footer.blur {
 .btn-login-mail {
   width: 100%;
   height: 45px;
-  background: #005a4a;
+  background: var(--color-darkseagreen);
   border: none;
   outline: none;
   border-radius: 6px;
