--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -745,3 +745,8 @@ hr {
   color: white;
   border: 1px solid rgb(255, 255, 255);
 }
+
+.diskusi-room-container {
+  width: 100%;
+  margin: 60px auto;
+}
