Add responsive design

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -32,6 +32,7 @@
     </div>
     <div class="navbar-extra">
       <button class="btn-login">Login</button>
+      <button id="hamburgerButton">☰</button>
     </div>
   </nav>
   <div class="wrapper">
