--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,6 +51,15 @@
   background-color: var(--gray-900);
 }
 
+#hamburgerButton {
+  background-color: transparent;
+  border: none;
+  font-size: 35px;
+  padding: 8px;
+  color: var(--color-sandybrown);
+  display: none;
+}
+
 .navbar.blur,
 main.blur,
 footer.blur {
@@ -771,7 +780,7 @@ hr {
 #twiContentContainer,
 #gecContentContainer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 50px;
   margin: 50px;
 }
