--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -96,9 +96,11 @@
         top: 0;
         right: -100%;
         background: white;
-        width: 100%;
-        height: 100vh;
+        width: 50%;
+        height: 50vh;
         transition: 0.3s;
+        display: block;
+
     }
 
     .navbar .navbar-nav.active {
@@ -196,11 +198,11 @@
     }
     .btn-smr2{
         position: relative;
-        transform: translate(80px, 150px);
+        transform: translate(250px, 80px);
     }
     .btn-smr1{
         position: relative;
-        transform: translate(80px, 150px);
+        transform: translate(250px, 80px);
     }
   }
 
@@ -316,6 +318,15 @@
     }
     .content-bentuk3{
         transform: translateX(-20px);
+    }
+
+    .btn-smr2{
+        position: relative;
+        transform: translate(190px, 120px);
+    }
+    .btn-smr1{
+        position: relative;
+        transform: translate(190px, 120px);
     }
 
 }
