--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -30,11 +30,12 @@
   <nav class="navbar" id="navbar">
     <p class="logo">EQUALITEACH</p>
     <div class="navbar-nav">
-      <a href="#/home" onClick="scrollToTop()">Home</a>
+      <a href="#/home" id="linka" onClick="scrollToTop()">Home</a>
       <a href="#/content" onClick="scrollToTop()">Content</a>
       <a href="#/aboutus">About Us</a>
     </div>
     <div class="navbar-extra">
+      <button onclick="window.location.href='https://client-equaliteach.vercel.app/auth/login'" class="btn-login">Login</button>
       <button id="hamburgerButton">☰</button>
     </div>
   </nav>
