--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
       <a href="#/aboutus">About Us</a>
     </div>
     <div class="navbar-extra">
-      <button onclick="window.location.href='https://client-equaliteach.vercel.app/auth/login'" class="btn-login">Login</button>
+      <button onclick="window.location.href='https://equaliteach-delta.vercel.app/auth/login'" class="btn-login">Login</button>
       <button id="hamburgerButton">☰</button>
     </div>
   </nav>
