add requirement for dicoding challenges

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="EQUALITEACH: Menyuarakan Kesetaraan Gender melalui Website Pendidikan Inklusif" content="Education for all Empowerment for Everyone">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
   <link rel="manifest" href="./app.webmanifest">
