--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -88,6 +88,7 @@
 @media screen and (max-width: 768px) {
     #hamburgerButton {
         display: inline-block;
+        transition: max-height 0.3s ease-out;
     }
 
     .navbar .navbar-nav {
@@ -99,7 +100,7 @@
         width: 50%;
         height: 50vh;
         transition: 0.3s;
-        display: block;
+        display: none;
 
     }
 
@@ -108,6 +109,8 @@
         width: 100%;
         height: 150vh;
         top: 100%;
+        display: block;
+        transition: max-height 0.3s ease-out;
     }
 
     .navbar .navbar-nav a {
@@ -207,6 +210,21 @@
         position: relative;
         transform: translate(250px, 80px);
     }
+    .home-child {
+        display: none;
+    }
+    .add-icon {
+        display: none;
+    }
+    .home-item {
+        display: none;
+    }
+    .home-inner{
+        display: none;
+    }
+    body {
+        overflow-x: hidden;
+    }
   }
 
   @media screen and (max-width: 700px) {
@@ -262,6 +280,21 @@
     .gender-equality-0-1 {
         width: 600px;
     }
+    .home-child {
+        display: none;
+    }
+    .add-icon {
+        display: none;
+    }
+    .home-item {
+        display: none;
+    }
+    .home-inner{
+        display: none;
+    }
+    body {
+        overflow-x: hidden;
+      }
 }
 
   @media screen and (max-width: 650px) {
@@ -331,6 +364,21 @@
         position: relative;
         transform: translate(190px, 120px);
     }
+    .home-child {
+        display: none;
+    }
+    .add-icon {
+        display: none;
+    }
+    .home-item {
+        display: none;
+    }
+    .home-inner{
+        display: none;
+    }
+    body {
+        overflow-x: hidden;
+      }
 
 }
 @media screen and (max-width: 395px) {
@@ -381,4 +429,19 @@
         width: 410px;
         height: auto;
     }
+    .home-child {
+        display: none;
+    }
+    .add-icon {
+        display: none;
+    }
+    .home-item {
+        display: none;
+    }
+    .home-inner{
+        display: none;
+    }
+    body {
+        overflow-x: hidden;
+      }
 }
