Fix for hamburger

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,6 +13,7 @@
 body {
     background-color: var(--color-gray-200);
     font-family: var(--font-public-sans);
+    overflow-x: hidden;
 }
 
 :root {
