--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -88,7 +88,6 @@
 @media screen and (max-width: 768px) {
     #hamburgerButton {
         display: inline-block;
-        transition: max-height 0.3s ease-out;
     }
 
     .navbar .navbar-nav {
@@ -100,17 +99,16 @@
         width: 50%;
         height: 50vh;
         transition: 0.3s;
-        display: none;
+        display: block;
 
     }
 
     .navbar .navbar-nav.active {
         right: 0;
         width: 100%;
-        height: 150vh;
+        height: 50vh;
         top: 100%;
-        display: block;
-        transition: max-height 0.3s ease-out;
+        text-align: center;
     }
 
     .navbar .navbar-nav a {
@@ -210,21 +208,6 @@
         position: relative;
         transform: translate(250px, 80px);
     }
-    .home-child {
-        display: none;
-    }
-    .add-icon {
-        display: none;
-    }
-    .home-item {
-        display: none;
-    }
-    .home-inner{
-        display: none;
-    }
-    body {
-        overflow-x: hidden;
-    }
   }
 
   @media screen and (max-width: 700px) {
@@ -280,21 +263,6 @@
     .gender-equality-0-1 {
         width: 600px;
     }
-    .home-child {
-        display: none;
-    }
-    .add-icon {
-        display: none;
-    }
-    .home-item {
-        display: none;
-    }
-    .home-inner{
-        display: none;
-    }
-    body {
-        overflow-x: hidden;
-      }
 }
 
   @media screen and (max-width: 650px) {
@@ -364,21 +332,6 @@
         position: relative;
         transform: translate(190px, 120px);
     }
-    .home-child {
-        display: none;
-    }
-    .add-icon {
-        display: none;
-    }
-    .home-item {
-        display: none;
-    }
-    .home-inner{
-        display: none;
-    }
-    body {
-        overflow-x: hidden;
-      }
 
 }
 @media screen and (max-width: 395px) {
@@ -429,19 +382,4 @@
         width: 410px;
         height: auto;
     }
-    .home-child {
-        display: none;
-    }
-    .add-icon {
-        display: none;
-    }
-    .home-item {
-        display: none;
-    }
-    .home-inner{
-        display: none;
-    }
-    body {
-        overflow-x: hidden;
-      }
 }
