--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,6 +28,7 @@
 
 </head>
 <body>
+  <a href="#mainContent" class="skip-link">Menuju ke konten</a>
   <nav class="navbar" id="navbar">
     <p class="logo">EQUALITEACH</p>
     <div class="navbar-nav">
