--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
       <a href="#/home" id="linka" onClick="scrollToTop()">Home</a>
       <a href="#/content" onClick="scrollToTop()">Content</a>
       <a href="#/aboutus">About Us</a>
-      <button onclick="window.location.href='https://equaliteach-delta.vercel.app/auth/login'" class="btn-login">Login</button>
+      <button onclick="window.location.href='https://client-equaliteach.vercel.app/auth/login'" class="btn-login">Login</button>
     </div>
     <div class="navbar-extra">
       <button id="hamburgerButton">☰</button>
